<resources>
    <string name="app_name">Mobile FA</string>
    <string name="reg_no">REGISTER NUMBER</string>
    <string name="name">NAME</string>
    <string name="email_id">EMAIL ID</string>
    <string name="dept">DEPARTMENT</string>
    <string name="year">YEAR</string>
    <string-array name="year_spin">
        <item>I</item>
        <item>II</item>
        <item>III</item>
        <item>IV</item>
    </string-array>
    <string-array name="section_spin">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
    </string-array>
    <string name="section">SECTION</string>
    <string name="password">PASSWORD</string>
    <string name="fa">FACULTY ADVISOR</string>
    <string name="sem">SELECT SEMESTER</string>
    <string name="cie">SELECT CIE</string>
    <string name="login">LOGIN</string>
    <string name="acc">New User? Register</string>
    <string name="reg">REGISTER</string>
    <string name="ac">Already have an account? Login</string>
    <string name="submit">SUBMIT</string>
    <string name="gpa">GPA</string>
    <string name="cgpa">CGPA</string>
    <string name="event_title">UPDATE EVENTS</string>
    <string name="coun_title">GENERAL COUNSELLING FORM</string>
    <string name="imp">Enter any improvements made</string>
    <string name="iss">Enter any issues you face</string>
    <string name="sug">Enter the suggestions given</string>
    <string name="update_cie">UPDATE CIE MARKS</string>
    <string name="update_sem">UPDATE SEMESTER MARKS</string>
    <string name="update_event">UPDATE EVENTS PARTICIPATED</string>
    <string name="gen_counselling_form">GENERAL COUNSELLING FORM</string>

    <string name="select_sem">SELECT SEMESTER</string>

    <string name="cie_select_cie">SELECT CIE</string>
    <string name="cie_select_sem">SELECT SEMESTER</string>
    <string name="select_sem_submit">SUBMIT</string>

    <string-array name="sem_spin">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>

    <string-array name="cie_spin">
        <item>I</item>
        <item>II</item>
        <item>III</item>
    </string-array>

    <string-array name="prize_spin">
        <item>I</item>
        <item>II</item>
        <item>III</item>
        <item>Participation</item>
    </string-array>

    <string name="event_button">EVENT PARTICIPATED</string>
    <string name="workshop_button">WORKSHOP ATTENDED</string>
    <string name="course_button">COURSE COMPLETED</string>
    <string name="workshop_title">Enter info about the workshop attended</string>
    <string name="workshop_topic">WORKSHOP TOPIC</string>
    <string name="workshop_clg">COLLEGE NAME</string>
    <string name="workshop_date">DATE ATTENDED</string>
    <string name="workshop_submit">SUBMIT</string>
    <string name="course_title">Enter info about the online course completed</string>
    <string name="course_name">SUBJECT NAME</string>
    <string name="course_org">ORGANIZATION NAME</string>
    <string name="course_mark">MARKS OBTAINED</string>
    <string name="course_submit">SUBMIT</string>
    <string name="comp_title">Enter info about the competition/event participated</string>
    <string name="comp_submit">SUBMIT</string>
    <string name="comp_name">EVENT NAME</string>
    <string name="comp_clg">COLLEGE NAME</string>
    <string name="comp_prize">PRIZE WON</string>
    <string name="coun_submit">SUBMIT</string>

    <string name="sem1">SEMESTER-I</string>
    <string name="sem1_eng_I">TECHNICAL ENGLISH-I</string>
    <string name="sem1_engg_mat_I">ENGINEERING MATHEMATICS-I</string>
    <string name="sem1_engg_phy">ENGINEERING PHYSICS</string>
    <string name="sem1_app_chem">APPLIED CHEMISTRY</string>
    <string name="sem1_cpr">PROGRAMMING IN C</string>
    <string name="sem1_beee">BASIC ELECTRICAL AND ELECTRONICS ENGINEERING</string>
    <string name="sem1_pcl_lab">PHYSICS AND CHEMISTRY LABORATORY-I</string>
    <string name="sem1_cpr_lab">C PROGRAMMING LABORATORY</string>
    <string name="sem1_epl_lab">ENGINEERING PRACTICES LABORATORY</string>
    <string name="sem1_gpa">GPA</string>
    <string name="sem1_cgpa">CGPA</string>
    <string name="sem1_submit">SUBMIT</string>

    <string name="sem2">SEMESTER-II</string>
    <string name="sem2_eng_II">TECHNICAL ENGLISH-II</string>
    <string name="sem2_engg_mat_II">ENGINEERING MATHEMATICS-II</string>
    <string name="sem2_phy_mat">PHYSICS OF MATERIALS</string>
    <string name="sem2_evs">ENVIRONMENTAL SCIENCE AND ENGINEERING</string>
    <string name="sem2_pds">PROGRAMMING AND DATA STRUCTURES</string>
    <string name="sem2_eg">ENGINEERING GRAPHICS</string>
    <string name="sem2_pcl_lab_II">PHYSICS AND CHEMISTRY LABORATORY-II</string>
    <string name="sem2_pds_lab">PDS LABORATORY</string>
    <string name="sem2_beee_lab">BEEE LABORATORY</string>
    <string name="sem2_gpa">GPA</string>
    <string name="sem2_cgpa">CGPA</string>
    <string name="sem2_submit">SUBMIT</string>

    <string name="sem3">SEMESTER-III</string>
    <string name="sem3_dis_mat">DISCRETE MATHEMATICS</string>
    <string name="sem3_ds">DATA STRUCTURES</string>
    <string name="sem3_dpsd">DIGITAL PRINCIPALS AND SYSTEM DESIGN</string>
    <string name="sem3_oops">OBJECT ORIENTED PROGRAMMING</string>
    <string name="sem3_coa">COMPUTER ORGANIZATION AND ARCHITECTURE</string>
    <string name="sem3_ds_oops_lab">DATA STRUCTURES AND OOPS LABORATORY</string>
    <string name="sem3_dig_lab">DIGITAL LABORATORY</string>
    <string name="sem3_comm_lab">COMMUNICATION LABORATORY</string>
    <string name="sem3_ss_apti">SOFT SKILLS AND APTITUDE</string>
    <string name="sem3_gpa">GPA</string>
    <string name="sem3_cgpa">CGPA</string>
    <string name="sem3_submit">SUBMIT</string>

    <string name="sem4">SEMESTER-IV</string>
    <string name="sem4_pqt">PROBABILITY AND QUEUING THEORY</string>
    <string name="sem4_dbms">DATABASE MANAGEMENT SYSTEM</string>
    <string name="sem4_os">OPERATING SYSTEM</string>
    <string name="sem4_daa">DESIGN AND ANALYSIS OF ALGORITHMS</string>
    <string name="sem4_wp">WEB PROGRAMMING</string>
    <string name="sem4_os_lab">OPERATING SYSTEMS LABORATORY</string>
    <string name="sem4_dbms_lab">DATABASE MANAGEMENT SYSTEMS LABORATORY</string>
    <string name="sem4_ss_apti_II">SOFT SKILLS AND APTITUDE-II</string>
    <string name="sem4_gpa">GPA</string>
    <string name="sem4_cgpa">CGPA</string>
    <string name="sem4_submit">SUBMIT</string>

    <string name="sem5">SEMESTER-V</string>
    <string name="sem5_se">SOFTWARE ENGINEERING</string>
    <string name="sem5_cn">COMPUTER NETWORKS</string>
    <string name="sem5_es">EMBEDDED SYSTEM DESIGN</string>
    <string name="sem5_toc">THEORY OF COMPUTATION</string>
    <string name="sem5_elective">ELECTIVE-I</string>
    <string-array name="elective_I_spin">
        <item name="multimedia">MULTIMEDIA SYSTEM</item>
        <item name="dwda">DATA WAREHOUSING AND DATA MINING</item>
        <item name="c#">C# AND DOTNET PROGRAMMING</item>
    </string-array>
    <string name="sem5_cn_lab">COMPUTER NETWORKS LABORATORY</string>
    <string name="sem5_python_lab">PYTHON PROGRAMMING LABORATORY</string>
    <string name="sem5_comm_lab">PROFESSIONAL COMMUNICATION SKILLS LABORATORY</string>
    <string name="sem5_ss_apti">SOFT SKILLS AND APTITUDE-III</string>
    <string name="sem5_gpa">GPA</string>
    <string name="sem5_cgpa">CGPA</string>
    <string name="sem5_submit">SUBMIT</string>

    <string name="sem6">SEMESTER-VI</string>
    <string name="sem6_pom">PRINCIPLES OF MANAGEMENT</string>
    <string name="sem6_pcd">PRINCIPLES OF COMPILER DESIGN</string>
    <string name="sem6_iot">INTERNET OF THINGS</string>
    <string name="sem6_elective_II">ELECTIVE-II</string>
    <string-array name="elective_II_spin">
        <item name="mdsd">MOBILE DEVICE SOFTWARE DEVELOPMENT</item>
        <item name="bi">BUSINESS INTELLIGENCE</item>
    </string-array>
    <string name="sem6_elective_III">ELECTIVE-III</string>
    <string-array name="elective_III_spin">
        <item name="spm">SOFTWARE PROJECT MANAGEMENT</item>
        <item name="gtc">GRAPH THEORY AND COMBINATORICS</item>
    </string-array>
    <string name="sem6_pcd_lab">PRINCIPLES OF COMPILER DESIGN LABORATORY</string>
    <string name="sem6_iot_lab">INTERNET OF THINGS LABORATORY</string>
    <string name="sem6_ss_apti">SOFT SKILLS AND APTITUDE-IV</string>
    <string name="sem6_gpa">GPA</string>
    <string name="sem6_cgpa">CGPA</string>
    <string name="sem6_submit">SUBMIT</string>


</resources>
