<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="#deecfc"
    android:padding="20dp"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/activity_sem3_title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="25dp"
        android:text="@string/sem3"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:hint="@string/sem3_dis_mat"
        android:id="@+id/activity_sem3_dis_mat_edittext"
        android:inputType="text"
        android:layout_margin="3dp"
        android:background="#b9ceeb"
        android:textColorHint="#233142" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:hint="@string/sem3_ds"
        android:id="@+id/activity_sem3_ds_edittext"
        android:inputType="text"
        android:layout_margin="3dp"
        android:background="#b9ceeb"
        android:textColorHint="#233142" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:hint="@string/sem3_dpsd"
        android:id="@+id/activity_sem3_dpsd_edittext"
        android:inputType="text"
        android:layout_margin="3dp"
        android:background="#b9ceeb"
        android:textColorHint="#233142" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:hint="@string/sem3_oops"
        android:id="@+id/activity_sem3_oops_edittext"
        android:inputType="text"
        android:layout_margin="3dp"
        android:background="#b9ceeb"
        android:textColorHint="#233142" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:hint="@string/sem3_coa"
        android:id="@+id/activity_sem3_coa_edittext"
        android:inputType="text"
        android:layout_margin="3dp"
        android:background="#b9ceeb"
        android:textColorHint="#233142"
        android:textSize="16.5sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:hint="@string/sem3_ds_oops_lab"
        android:id="@+id/activity_sem3_ds_oops_lab_edittext"
        android:inputType="text"
        android:layout_margin="3dp"
        android:background="#b9ceeb"
        android:textColorHint="#233142" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:hint="@string/sem3_dig_lab"
        android:id="@+id/activity_sem3_dig_lab_edittext"
        android:inputType="text"
        android:layout_margin="3dp"
        android:background="#b9ceeb"
        android:textColorHint="#233142" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:hint="@string/sem3_comm_lab"
        android:id="@+id/activity_sem3_comm_lab_edittext"
        android:inputType="text"
        android:layout_margin="3dp"
        android:background="#b9ceeb"
        android:textColorHint="#233142" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:hint="@string/sem3_ss_apti"
        android:id="@+id/activity_sem3_ss_apti_edittext"
        android:inputType="text"
        android:layout_margin="3dp"
        android:background="#b9ceeb"
        android:textColorHint="#233142" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:hint="@string/sem3_gpa"
        android:id="@+id/activity_sem3_gpa_edittext"
        android:inputType="numberDecimal"
        android:layout_margin="3dp"
        android:background="#b9ceeb"
        android:textColorHint="#233142" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:hint="@string/sem3_cgpa"
        android:id="@+id/activity_sem3_cgpa_edittext"
        android:inputType="numberDecimal"
        android:layout_margin="3dp"
        android:background="#b9ceeb"
        android:textColorHint="#233142" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/sem3_submit"
        android:layout_margin="15dp"
        android:padding="10dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:id="@+id/activity_sem3_submit_button"
        android:background="#111d5e"
        android:textColor="#fff" />


</LinearLayout>