<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="#deecfc"
    android:padding="20dp"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/activity_sem2_title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="25dp"
        android:text="@string/sem2"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:hint="@string/sem2_eng_II"
        android:id="@+id/activity_sem2_eng_II_edittext"
        android:inputType="text"
        android:layout_margin="3dp"
        android:background="#b9ceeb"
        android:textColorHint="#233142" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:hint="@string/sem2_engg_mat_II"
        android:id="@+id/activity_sem2_engg_mat_II_edittext"
        android:inputType="text"
        android:layout_margin="3dp"
        android:background="#b9ceeb"
        android:textColorHint="#233142" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:hint="@string/sem2_phy_mat"
        android:id="@+id/activity_sem2_phy_mat_edittext"
        android:inputType="text"
        android:layout_margin="3dp"
        android:background="#b9ceeb"
        android:textColorHint="#233142" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:hint="@string/sem2_evs"
        android:id="@+id/activity_sem2_evs_edittext"
        android:textSize="16.8dp"
        android:inputType="text"
        android:layout_margin="3dp"
        android:background="#b9ceeb"
        android:textColorHint="#233142" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:hint="@string/sem2_pds"
        android:id="@+id/activity_sem2_pds_edittext"
        android:inputType="text"
        android:layout_margin="3dp"
        android:background="#b9ceeb"
        android:textColorHint="#233142" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:hint="@string/sem2_eg"
        android:id="@+id/activity_sem2_eg_edittext"
        android:inputType="text"
        android:layout_margin="3dp"
        android:background="#b9ceeb"
        android:textColorHint="#233142" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:hint="@string/sem2_pcl_lab_II"
        android:id="@+id/activity_sem2_pcl_lab_II_edittext"
        android:inputType="text"
        android:layout_margin="3dp"
        android:background="#b9ceeb"
        android:textColorHint="#233142" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:hint="@string/sem2_pds_lab"
        android:id="@+id/activity_sem2_pds_lab_edittext"
        android:inputType="text"
        android:layout_margin="3dp"
        android:background="#b9ceeb"
        android:textColorHint="#233142" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:hint="@string/sem2_beee_lab"
        android:id="@+id/activity_sem2_beee_lab_edittext"
        android:inputType="text"
        android:layout_margin="3dp"
        android:background="#b9ceeb"
        android:textColorHint="#233142" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:hint="@string/sem2_gpa"
        android:id="@+id/activity_sem2_gpa_edittext"
        android:inputType="numberDecimal"
        android:layout_margin="3dp"
        android:background="#b9ceeb"
        android:textColorHint="#233142" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:hint="@string/sem2_cgpa"
        android:id="@+id/activity_sem2_cgpa_edittext"
        android:inputType="numberDecimal"
        android:layout_margin="3dp"
        android:background="#b9ceeb"
        android:textColorHint="#233142" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/sem2_submit"
        android:layout_margin="15dp"
        android:padding="10dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:id="@+id/activity_sem2_submit_button"
        android:background="#111d5e"
        android:textColor="#fff" />


</LinearLayout>