<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="#deecfc"
    android:padding="20dp"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/activity_sem4_title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="25dp"
        android:text="@string/sem4"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:hint="@string/sem4_pqt"
        android:id="@+id/activity_sem4_pqt_edittext"
        android:inputType="text"
        android:layout_margin="3dp"
        android:background="#b9ceeb"
        android:textColorHint="#233142" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:hint="@string/sem4_dbms"
        android:id="@+id/activity_sem4_dbms_edittext"
        android:inputType="text"
        android:layout_margin="3dp"
        android:background="#b9ceeb"
        android:textColorHint="#233142" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:hint="@string/sem4_os"
        android:id="@+id/activity_sem4_os_edittext"
        android:inputType="text"
        android:layout_margin="3dp"
        android:background="#b9ceeb"
        android:textColorHint="#233142" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:hint="@string/sem4_daa"
        android:id="@+id/activity_sem4_daa_edittext"
        android:inputType="text"
        android:layout_margin="3dp"
        android:background="#b9ceeb"
        android:textColorHint="#233142" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:hint="@string/sem4_wp"
        android:id="@+id/activity_sem4_wp_edittext"
        android:inputType="text"
        android:layout_margin="3dp"
        android:background="#b9ceeb"
        android:textColorHint="#233142" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:hint="@string/sem4_os_lab"
        android:id="@+id/activity_sem4_os_lab_edittext"
        android:inputType="text"
        android:layout_margin="3dp"
        android:background="#b9ceeb"
        android:textColorHint="#233142" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:hint="@string/sem4_dbms_lab"
        android:id="@+id/activity_sem4_dbms_lab_edittext"
        android:inputType="text"
        android:layout_margin="3dp"
        android:background="#b9ceeb"
        android:textColorHint="#233142"
        android:textSize="15.8sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:hint="@string/sem4_ss_apti_II"
        android:id="@+id/activity_sem4_ss_apti_II_edittext"
        android:inputType="text"
        android:layout_margin="3dp"
        android:background="#b9ceeb"
        android:textColorHint="#233142" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:hint="@string/sem4_gpa"
        android:id="@+id/activity_sem4_gpa_edittext"
        android:inputType="numberDecimal"
        android:layout_margin="3dp"
        android:background="#b9ceeb"
        android:textColorHint="#233142" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:hint="@string/sem4_cgpa"
        android:id="@+id/activity_sem4_cgpa_edittext"
        android:inputType="numberDecimal"
        android:layout_margin="3dp"
        android:background="#b9ceeb"
        android:textColorHint="#233142" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/sem4_submit"
        android:layout_margin="15dp"
        android:padding="10dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:id="@+id/activity_sem4_submit_button"
        android:background="#111d5e"
        android:textColor="#fff" />


</LinearLayout>