<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="#deecfc"
    android:padding="10dp"
    >

    <TextView
        android:id="@+id/activity_event_course_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/course_title"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:textColor="#000"
        android:textStyle="bold"
        android:layout_margin="40dp"
        android:textAlignment="center"
        android:textAllCaps="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:hint="@string/course_name"
        android:id="@+id/activity_event_course_topic_edittext"
        android:inputType="text"
        android:layout_margin="10dp"
        android:background="#b9ceeb"
        android:textColorHint="#233142" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:hint="@string/course_org"
        android:id="@+id/activity_event_course_org_edittext"
        android:inputType="text"
        android:layout_margin="10dp"
        android:background="#b9ceeb"
        android:textColorHint="#233142" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:hint="@string/course_mark"
        android:id="@+id/activity_event_course_marks_edittext"
        android:inputType="numberDecimal"
        android:layout_margin="10dp"
        android:background="#b9ceeb"
        android:textColorHint="#233142" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/course_submit"
        android:layout_margin="15dp"
        android:padding="10dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:id="@+id/activity_event_course_submit_button"
        android:background="@drawable/button_shape"
        android:textColor="#fff" />

</LinearLayout>
